17:23 
Monday, 23 January 2017 (GMT) -

- Started Project
- Added changelog.txt 

17:53
Monday, 23 January 2017 (GMT) 

- Added command /pvphelp with permission

18:23
Monday, 23 January 2017 (GMT) 

- Added command /pvpchallenge with permission

19:11
Monday, 23 January 2017 (GMT) 

- Added command /pvpsetspawn with permission