@@ -1,0 +1,7 @@
+package me.admin.retrieverpvp.utils;
+
+public class MessageBlank {
+	
+	public static String blank = "";
+
+}
