@@ -1,0 +1,10 @@
+package me.admin.retrieverpvp.utils;
+
+import org.bukkit.ChatColor;
+
+public class MessagePlayerTeleported {
+	
+	public static String playerTeleported = ChatColor.GREEN + "You have teleported ";
+	public static String playerTeleported2 = ChatColor.GREEN + " to the Arena!";
+
+}
