@@ -1,0 +1,9 @@
+package me.admin.retrieverpvp.utils;
+
+import org.bukkit.ChatColor;
+
+public class MessageSpawnsDeleted {
+	
+	public static String spawnsDeleted = ChatColor.GREEN + "Spawns deleted!";
+
+}
