@@ -1,0 +1,9 @@
+package me.admin.retrieverpvp.utils;
+
+import org.bukkit.ChatColor;
+
+public class MessageTeleported {
+	
+	public static String teleported = ChatColor.GREEN + " has just teleported you to the arena!";
+
+}
